objects/PaymentType__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Mapping of Payment Type code to credit card type and credit card logo URL.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Type__c</fullName>
        <label>Logo Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_URL__c</fullName>
        <label>Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PLCC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PLCC</label>
        <type>Checkbox</type>
    </fields>
    <label>PaymentType</label>
</CustomObject>